# NLAH

./: .env.template  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_or_release.yml  runtime_or_harness_proposal.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  module-authoring.md  roadmap.md
harnesses/: README.md
harnesses/artifacts/live-swe-agent/: SKILL.md
harnesses/artifacts/live-swe-agent/references/: prompts.md  tool-synthesis-prompt.md
harnesses/artifacts/swe-agent/: SKILL.md
harnesses/artifacts/swe-agent/references/: action-samplers.md  system-template.md  tools.md
harnesses/artifacts/trae-agent/: SKILL.md
harnesses/artifacts/trae-agent/references/: patch-selector-prompt.md  system-prompt.md  trajectory-schema.md
harnesses/modules/dynamic-subagent-orchestration/: SKILL.md
harnesses/modules/evidence-protocol/: SKILL.md
harnesses/modules/file-backed-state/: SKILL.md
harnesses/modules/multi-candidate-search/: SKILL.md
harnesses/modules/self-evolution/: SKILL.md
harnesses/modules/verifier/: SKILL.md
runtime-policy/: README.md  SKILL.md
src/: linguaclaw.py
src/appserver/: __init__.py  config.py  env.py  events.py  model_gateway.py  module_loader.py  runtime.py  state.py  tool_bash.py
src/nlah/: __init__.py  __main__.py  cli.py
src/rich_cli/: __init__.py
tool-skills/: README.md
